# csad2125ki306rudvi18

./: .gitignore  README.md
.github/workflows/: rps_controller_build.yaml  rps_doxygen.yaml  rps_gui.yaml  rps_linter.yaml
RPS_Controller/: .gitignore  CMakeLists.txt  Doxyfile  partitions.csv  sdkconfig  sdkconfig.old
RPS_Controller/build-tests/: CMakeCache.txt
RPS_Controller/components/common_data/: emulator_commdata.h
RPS_Controller/components/emulator/: CMakeLists.txt  emulator.c
RPS_Controller/components/emulator/include/: emulator.h  emulator_private.h
RPS_Controller/components/emulator/test/: CMakeLists.txt  test_emulator.c
RPS_Controller/components/idf_test/include/: idf_performance.h
RPS_Controller/components/ini_handler/: CMakeLists.txt  ini_handler.c
RPS_Controller/components/ini_handler/include/: ini_handler.h  ini_handler_private.h
RPS_Controller/components/test_utils/include/: test_utils.h
RPS_Controller/components/uart_controller/: CMakeLists.txt  uart_controller.c
RPS_Controller/components/uart_controller/include/: uart_controller_private.h
RPS_Controller/main/: CMakeLists.txt  main.c
RPS_Controller/main/common_data/: emulator_commdata.h
RPS_Controller/main/emulator/: emulator.c  emulator.h  emulator_private.h
RPS_Controller/main/ini_handler/: ini_handler.c  ini_handler.h  ini_handler_private.h
RPS_Controller/main/ini_handler/inidump/: rx.ini
RPS_Controller/main/ini_handler/iniparser/: iniparser.c  iniparser.h
RPS_Controller/main/uart_controller/: uart_controller.c  uart_controller.h  uart_controller_private.h
RPS_Controller/test/: CMakeLists.txt  main.c
RPS_Controller/test/main/: CMakeLists.txt  some_unit_test.c
RPS_GUI/: CMakeLists.txt  CTestTestfile.cmake  CommonDataTypes.h  Doxyfile  UartTxRx.cpp  UartTxRx.h  appka.ui  deploy  gamedata.cpp  gamedata.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  inibyteparser.cpp  inibyteparser.h  inihandler.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
RPS_GUI/build-tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
RPS_GUI/build-tests/Testing/Temporary/: CTestCostData.txt
RPS_GUI/build-tests/UartTxRx_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
RPS_GUI/build-tests/UartTxRx_autogen/EWIEGA46WW/: moc_UartTxRx.cpp.d
RPS_GUI/build-tests/tests/: CTestTestfile.cmake  cmake_install.cmake  unit_tests
RPS_GUI/build-tests/tests/unit_tests_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
RPS_GUI/build-tests/tests/unit_tests_autogen/EWIEGA46WW/: moc_testuarttxrx.cpp.d
RPS_GUI/tests/: CMakeLists.txt  testuarttxrx.cpp  testuarttxrx.h
ci/: build_controller.sh  build_gui.sh
scripts/: GenerateDoxy_RPS_Controller.sh  GenerateDoxy_RPS_GUI.sh  MainCIScript.sh  TestAndCov_Report.py  TestsCI.sh  amogus.sh  build_controller.sh
